<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeActivity">

        <ImageView
            android:id="@+id/iv_home_profile"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_home_name"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/home_name"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_home_profile" />

        <TextView
            android:id="@+id/tv_home_age"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/home_age"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_home_name" />

        <TextView
            android:id="@+id/tv_home_mbti"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/home_mbti"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_home_age" />

        <Button
            android:id="@+id/btn_home_follower_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:text="@string/home_follower_title"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/btn_home_repository_list"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_mbti" />

        <Button
            android:id="@+id/btn_home_repository_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="60dp"
            android:text="@string/home_repository_title"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_home_follower_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_home_follower_list"
            app:layout_constraintTop_toTopOf="@id/btn_home_follower_list" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/container_home_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_home_follower_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
