<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homeViewModel"
            type="sopt.android.assignment.ui.home.viewmodel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.profile.ProfileFragment">

        <View
            android:id="@+id/layout_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="-31dp"
            android:background="@color/thesopt_darkgray"
            app:layout_constraintBottom_toBottomOf="@id/tv_profile_introduction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_profile_img"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/home_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile_img" />

        <TextView
            android:id="@+id/tv_profile_git_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/home_git_id"
            android:textColor="@color/thesopt_lightgray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />

        <TextView
            android:id="@+id/tv_profile_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/home_introduction"
            android:textColor="@color/sopt_dark_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_git_id" />

        <TextView
            android:id="@+id/btn_profile_follower_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/selector_profile_btn"
            android:checked="true"
            android:paddingHorizontal="35dp"
            android:paddingVertical="13dp"
            android:stateListAnimator="@null"
            android:text="@string/home_follower_title"
            android:textAlignment="center"
            android:textColor="@drawable/selector_profile_btn_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/btn_profile_repository_list"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_bg" />

        <TextView
            android:id="@+id/btn_profile_repository_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="11dp"
            android:background="@drawable/selector_profile_btn"
            android:paddingHorizontal="35dp"
            android:paddingVertical="13dp"
            android:stateListAnimator="@null"
            android:text="@string/home_repository_title"
            android:textAlignment="center"
            android:textColor="@drawable/selector_profile_btn_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_profile_follower_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_profile_follower_list"
            app:layout_constraintTop_toTopOf="@id/btn_profile_follower_list" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/container_home_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_profile_repository_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
